service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demoaapcoreistio
spec:
  template:
    metadata:
      labels:
        app: demoaapcoreistio
    spec:
      containers:
      - image: 50408/demoappcore
        name: demoaapcoreistio
        resources:
          requests:
            memory: 1Gi
          limits:
            memory: 1Gi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demoaapcoreistio
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol : "TCP"
    targetPort : 80
  selector:
    app: demoaapcoreistio
