istio.yaml
# demoappcore-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demoappcore
spec:
  hosts:
  - "*"
  gateways:
  - demoappcore-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demoappcore.demoappcore.svc.cluster.local
        port:
          number: 8080
---
# demoappcore-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demoappcore-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
